kubernetes/custom/khadga-dev-cluster-ip.yaml
apiVersion: v1
kind: Service
metadata:
  name: khadga-cluster-ip-service
spec:
  type: NodePort
  selector:
    component: khadga
  ports:
    - port: 7001
      targetPort: 7001
      protocol: TCP
