kubernetes/custom/mimir-node-ip.yaml
apiVersion: v1
kind: Service
metadata:
  name: mimir-node-ip-service
spec:
  type: ClusterIP
  selector:
    component: mimir
  ports:
    - port: 3000
      targetPort: 3000
