kubernetes/custom/ingress-service.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: basic-ingress
  annotations:
    kubernetes.io/ingress.global-static-ip-name: khadga-app
    networking.gke.io/managed-certificates: khadga-certificate
    kubernetes.io/ingress.allow-http: "false"
spec:
  backend: 
    serviceName: khadga-cluster-ip-service 
    servicePort: 7001
